[gd_scene load_steps=6 format=3 uid="uid://67dwpro7to48"]

[ext_resource type="Script" path="res://torre_1.gd" id="1_15prc"]
[ext_resource type="Texture2D" uid="uid://dp6b5kun1e01h" path="res://Torres/Tower.png" id="2_7rsen"]
[ext_resource type="Texture2D" uid="uid://wxc17np7hlqi" path="res://Torres/Cañon/Cannon.png" id="3_dxd03"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i5c6m"]
radius = 147.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ts5d"]
size = Vector2(70, 65)

[node name="torre_1" type="Node2D"]
script = ExtResource("1_15prc")

[node name="Button" type="Button" parent="."]
offset_left = -26.0
offset_top = -29.0
offset_right = 30.0
offset_bottom = 31.0

[node name="area" type="Area2D" parent="."]

[node name="area_vision" type="CollisionShape2D" parent="area"]
shape = SubResource("CircleShape2D_i5c6m")

[node name="base" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.274, 0.274)
texture = ExtResource("2_7rsen")

[node name="torreta" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.274, 0.274)
texture = ExtResource("3_dxd03")

[node name="Position2D" type="Marker2D" parent="torreta"]
position = Vector2(131.387, 10.9484)

[node name="seguimiento" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Velocidad_disparo" type="Timer" parent="."]
wait_time = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
offset_right = 141.0
offset_bottom = 89.0

[node name="Subir_nivel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Subir Nivel"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nivel ???"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Daño: ???"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rango: ???"

[node name="Evolucionar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Evolucionar"

[node name="Construir" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Construir"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_8ts5d")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
[connection signal="timeout" from="seguimiento" to="." method="_on_seguimiento_timeout"]
[connection signal="timeout" from="Velocidad_disparo" to="." method="_on_velocidad_disparo_timeout"]
[connection signal="pressed" from="VBoxContainer/Subir_nivel" to="." method="_on_subir_nivel_pressed"]
[connection signal="input_event" from="Construir" to="." method="_on_construir_input_event"]
